fixing z-index bug

--- a/src/_sass/partials/_nav.scss
+++ b/src/_sass/partials/_nav.scss
@@ -4,6 +4,7 @@ $mobileNavSize: 100 / $space;
   max-width: 216px;
   font-size: .9em;
   line-height: 2;
+  z-index: z-index(17);
   /*
   @include media("<=tablet") {
     max-width: none;
@@ -80,6 +81,7 @@ $mobileNavSize: 100 / $space;
     border-bottom: 1px solid $grey;
     padding-left: .25em;
     position: relative;
+    z-index: z-index(17);
     @include media(">=screen-sm") {
       &:hover,
       &:focus {
